[package]
name = "labrador"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]

[dependencies]
rand = "0.8.5"
ring-math = "0.1.0"
scalarff = "0.5.1"
ashlang = { version = "0.1.2", default-features = false }
#ashlang = { path = "../ashlang/ashlang", default-features = false }
anyhow = "1.0.89"

#ring-math = { path = "../ashlang/ring-math" }
#scalarff = { path = "../scalarff" }
